@@ -8,7 +8,6 @@ PACKAGES = \
 	
 PROJ_CLASSPATH = \
     $(INSTALL_DIR)/com.primix.tapestry.jar \
-	$(INSTALL_DIR)/gnu-regexp.jar \
 	$(INSTALL_DIR)/javax.servlet.jar \
 	$(INSTALL_DIR)/javax.xml.jaxp.jar \
 	$(INSTALL_DIR)/org.apache.crimson.jar \
