@@ -1,0 +1,74 @@
+<?xml version="1.0"?>
+<!-- $Id$ -->
+<project name="Tapestry Tutorial" default="install">
+  <!-- Directory in which compiled classes are placed -->
+  <property name="classes" value="classes"/>
+  <!-- Directory that contains library frameworks, and to
+       which the WAR is eventually installed -->
+  <property name="lib" value="../../lib"/>
+  <!-- Directory containing source code and package resources -->
+  <property name="src" value="src"/>
+  <!-- Path of the installed framework jar -->
+  <property name="tutorial.war" value="${lib}/Tutorial.war"/>
+  <!-- Relative path to the Javadoc directory -->
+  <property name="javadoc.dir" value="../doc/api"/>
+  <path id="project.class.path">
+    <pathelement location="${lib}/ejb.jar"/>
+    <pathelement location="${lib}/javax.servlet.jar"/>
+    <pathelement location="${lib}/log4j-core.jar"/>
+    <pathelement location="${lib}/javax.xml.jaxp.jar"/>
+    <pathelement location="${lib}/org.apache.crimson.jar"/>
+    <pathelement location="${lib}/com.primix.tapestry.jar"/>
+    <pathelement location="${lib}/net.sf.tapestry.contrib.jar"/>
+  </path>
+  <target name="init">
+    <tstamp/>
+    <mkdir dir="${classes}"/>
+  </target>
+  <target name="clean">
+    <delete dir="${classes}"/>
+  </target>
+  <target name="compile" depends="init" description="Compile all classes in the framework.">
+    <javac srcdir="${src}" destdir="${classes}">
+      <classpath refid="project.class.path"/>
+    </javac>
+  </target>
+  
+  
+  <target name="install" depends="compile" description="Compile all classes and build the installed WAR including all package resources.">
+    <copy todir="${classes}">
+            <fileset dir="${src}">
+        <include name="**/*.jwc"/>
+        <include name="**/*.html"/>
+        <include name="**/*.gif"/>
+        <include name="**/*.dtd"/>
+        <include name="**/*.script"/>
+        <include name="**/*.properties"/>
+        <include name="**/*.application"/>
+        <exclude name="**/package.html"/>
+      </fileset>
+    </copy>
+    <war warfile="${tutorial.war}" webxml="web.xml">
+
+      <zipfileset dir="images" prefix="images"/>
+      
+      <fileset dir=".">
+        <include name="*.html"/>
+     </fileset>
+	  <classes dir="${classes}"/>         
+    </war>
+  </target>
+
+  <target name="run" description="Run the Tutorial application." depends="install">
+    <java classname="org.mortbay.jetty.Server" fork="true">
+      <classpath>
+        <path refid="project.class.path"/>
+        <pathelement location="${lib}/org.mortbay.jetty.jar"/>
+      </classpath>
+      <arg value="jetty.xml"/>
+      <jvmarg value="-showversion"/>
+      <sysproperty key="com.primix.tapestry.enable-reset-service" value="true"/>
+    </java>
+  </target>
+</project>
+
